@@ -2069,6 +2069,7 @@ void SCIPgetSolTransObjExact(
  *          SCIP_Retcode "SCIP_RETCODE" for a complete list of error codes.
  *
  *  @pre This method can be called if SCIP is in one of the following stages:
+ *       - \ref SCIP_STAGE_TRANSFORMED
  *       - \ref SCIP_STAGE_PRESOLVING
  *       - \ref SCIP_STAGE_SOLVING
  *
@@ -2082,9 +2083,12 @@ SCIP_RETCODE SCIPrecomputeSolObj(
    assert(sol != NULL);
    assert(sol->scip == scip);
 
-   SCIP_CALL( SCIPcheckStage(scip, "SCIPrecomputeSolObj", FALSE, FALSE, FALSE, FALSE, FALSE, TRUE, FALSE, FALSE, FALSE, TRUE, FALSE, FALSE, FALSE, FALSE) );
+   SCIP_CALL( SCIPcheckStage(scip, "SCIPrecomputeSolObj", FALSE, FALSE, FALSE, TRUE, FALSE, TRUE, FALSE, FALSE, FALSE, TRUE, FALSE, FALSE, FALSE, FALSE) );
 
-   SCIPsolRecomputeObj(sol, scip->set, scip->stat, scip->origprob);
+   if( SCIPsolIsExact(sol) )
+      SCIPsolRecomputeInternObjExact(sol, scip->set, scip->stat, scip->origprob);
+   else
+      SCIPsolRecomputeObj(sol, scip->set, scip->stat, scip->origprob);
 
    return SCIP_OKAY;
 }
