@@ -10,6 +10,8 @@ Fixed bugs
 - avoid crash when initial IIS solve fails while reporting errors explicitly
 - fixed failure in nl writing on big endian machines
 - correct memory reallocation in storeSubproblemMasterVar() of benders.c to avoid freeing errors
+- also set real solution in SCIPsolSetValExact() to maintain approximation
+- handle exact solutions in SCIPsolCheckOrig(), SCIPcheckSolOrig(), and SCIPrecomputeSolObj() to correctly check exact initial solutions in SCIPtransformProb()
 
 Miscellaneous
 -------------
